5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/4004/executions/1590_2895.log
== TEST (2019-03-25 14:08:48) 
-- CODE:
variaveis
var1 = float(input("Valor do Jogo"))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    variaveis
NameError: name 'variaveis' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 14:08:58) 
-- CODE:

var1 = float(input("Valor do Jogo"))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    variaveis
NameError: name 'variaveis' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 14:09:42) 
-- CODE:

var1 = float(input("Valor do Jogo "))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    variaveis
NameError: name 'variaveis' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 14:13:15) 
-- CODE:

var1 = float(input("Quantidade de Jogo ")) # $ por jogo
var2 = 
-- ERROR:
File "XXXX", line 3
    var2 = 
          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 14:15:31) 
-- CODE:

var1 = float(input("Preço por Jogo ")) # $ por jogo
var2 = float(input("Quantidade por jogo ")) # No por Jogo
-- ERROR:
File "XXXX", line 3
    var2 = 
          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 14:15:43) 
-- CODE:

var1 = float(input("Preço por Jogo ")) # $ por jogo
var2 = float(input("Quantidade por jogo ")) # No por Jogo
-- ERROR:
File "XXXX", line 3
    var2 = 
          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 14:15:53) 
-- CODE:
var1 = float(input("Preço por Jogo ")) # $ por jogo
var2 = float(input("Quantidade por jogo ")) # No por Jogo
-- ERROR:
File "XXXX", line 3
    var2 = 
          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 14:16:00) 
-- CODE:
var1 = float(input("Preço por Jogo ")) # $ por jogo
var2 = float(input("Quantidade por jogo ")) # No por Jogo
-- ERROR:
File "XXXX", line 3
    var2 = 
          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-25 14:16:06) 
-- CODE:
var1 = float(input("Preço por Jogo ")) # $ por jogo
var2 = float(input("Quantidade por jogo ")) # No por Jogo
-- EXECUTION TIME:
0.158674
-- TEST CASE 1:
---- input:
12
45.0
78.0
---- correct output:
618.0
---- user output:

-- TEST CASE 2:
---- input:
10
67.0
95.0
---- correct output:
765.0
---- user output:

-- TEST CASE 3:
---- input:
246
975.0
321.0
---- correct output:
240171.0
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 14:16:22) 
-- CODE:
var1 = float(input("Preço por Jogo ")) # por jogo
var2 = float(input("Quantidade por jogo ")) # No por Jogo
-- ERROR:
File "XXXX", line 3
    var2 = 
          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 14:17:26) 
-- CODE:
var1 = float(input("Preço por Jogo ")) # por jogo

var2 = var1 * 5

total = input


-- ERROR:
File "XXXX", line 3
    var2 = 
          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-25 14:17:42) 
-- CODE:
var1 = float(input("Preço por Jogo "))

var2 = var1 * 5

total = input


-- EXECUTION TIME:
0.143033
-- TEST CASE 1:
---- input:
12
45.0
78.0
---- correct output:
618.0
---- user output:

-- TEST CASE 2:
---- input:
10
67.0
95.0
---- correct output:
765.0
---- user output:

-- TEST CASE 3:
---- input:
246
975.0
321.0
---- correct output:
240171.0
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 14:17:45) 
-- CODE:
var1 = float(input("Preço por Jogo "))

var2 = var1 * 5

total = input


-- ERROR:
File "XXXX", line 3
    var2 = 
          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 14:18:02) 
-- CODE:

var1 = float(input("Preço por Jogo "))



-- ERROR:
File "XXXX", line 3
    var2 = 
          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 14:18:10) 
-- CODE:
var1 = float(input("Preço por Jogo "))
-- ERROR:
File "XXXX", line 3
    var2 = 
          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 14:20:37) 
-- CODE:
var1 = input(float("Valor"))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    var1 = input(float("Valor"))
ValueError: could not convert string to float: 'Valor'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 14:20:53) 
-- CODE:
var1 = input(spring("Valor"))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    var1 = input(spring("Valor"))
NameError: name 'spring' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 14:21:15) 
-- CODE:
var1 = input(float("Valor "))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    var1 = input(float("Valor "))
ValueError: could not convert string to float: 'Valor '
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 14:21:26) 
-- CODE:
var1 = input(float(Valor ))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    var1 = input(float(Valor ))
NameError: name 'Valor' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 14:21:36) 
-- CODE:
var1 = input(float("Valor "))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    var1 = input(float("Valor "))
ValueError: could not convert string to float: 'Valor '
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 14:22:31) 
-- CODE:
var1 = float(input("Qual o valor? "))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    var1 = input(float("Valor "))
ValueError: could not convert string to float: 'Valor '
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 14:24:17) 
-- CODE:
var1 = float(input("Qual o valor? ")) #Valor

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    var1 = input(float("Valor "))
ValueError: could not convert string to float: 'Valor '
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 14:24:23) 
-- CODE:
var1 = float(input("Qual o valor? ")) #Valor

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    var1 = input(float("Valor "))
ValueError: could not convert string to float: 'Valor '
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 14:25:07) 
-- CODE:
var1 = float(input("Qual o valor? ")) #Valor
var2 = float(input("Quantos jogos? ")) #Quantidade
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    var1 = input(float("Valor "))
ValueError: could not convert string to float: 'Valor '
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 14:29:56) 
-- CODE:
var2 = float(input("Quantos jogos? ")) #Quantidade
var1 = float(input("Qual o valor? ")) #Valor
var3 = float(input("Frete ")) #Frete

total = var2*var3 + var3

print(total)
-- OUTPUT:
1014.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-25 14:30:09) 
-- CODE:
var2 = float(input("Quantos jogos? ")) #Quantidade
var1 = float(input("Qual o valor? ")) #Valor
var3 = float(input("Frete ")) #Frete

total = var2*var3 + var3

print(total)
-- EXECUTION TIME:
0.156718
-- TEST CASE 1:
---- input:
12
45.0
78.0
---- correct output:
618.0
---- user output:
1014.0
-- TEST CASE 2:
---- input:
10
67.0
95.0
---- correct output:
765.0
---- user output:
1045.0
-- TEST CASE 3:
---- input:
246
975.0
321.0
---- correct output:
240171.0
---- user output:
79287.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 14:31:06) 
-- CODE:
var1 = float(input("Quantos jogos? ")) #Quantidade
var2 = float(input("Qual o valor? ")) #Valor
var3 = float(input("Frete ")) #Frete

total = var1*var2 + var3

print(total)
-- OUTPUT:
618.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-25 14:31:17) 
-- CODE:
var1 = float(input("Quantos jogos? ")) #Quantidade
var2 = float(input("Qual o valor? ")) #Valor
var3 = float(input("Frete ")) #Frete

total = var1*var2 + var3

print(total)
-- EXECUTION TIME:
0.138466
-- TEST CASE 1:
---- input:
12
45.0
78.0
---- correct output:
618.0
---- user output:
618.0
-- TEST CASE 2:
---- input:
10
67.0
95.0
---- correct output:
765.0
---- user output:
765.0
-- TEST CASE 3:
---- input:
246
975.0
321.0
---- correct output:
240171.0
---- user output:
240171.0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
